logs/empowering.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/arrow'...
Listing './lib/python3.5/site-packages/arrow-0.12.0.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/empowering'...
Compiling './lib/python3.5/site-packages/empowering/__init__.py'...
***   File "./lib/python3.5/site-packages/empowering/__init__.py", line 4
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/empowering/executors'...
Listing './lib/python3.5/site-packages/empowering-0.15.3.egg-info'...
Listing './lib/python3.5/site-packages/libsaas'...
Listing './lib/python3.5/site-packages/libsaas/executors'...
Listing './lib/python3.5/site-packages/libsaas/filters'...
Listing './lib/python3.5/site-packages/libsaas/scripts'...
Listing './lib/python3.5/site-packages/libsaas/services'...
Listing './lib/python3.5/site-packages/libsaas/services/basecamp'...
Listing './lib/python3.5/site-packages/libsaas/services/bitbucket'...
Listing './lib/python3.5/site-packages/libsaas/services/bitly'...
Listing './lib/python3.5/site-packages/libsaas/services/cartodb'...
Listing './lib/python3.5/site-packages/libsaas/services/compete'...
Listing './lib/python3.5/site-packages/libsaas/services/desk'...
Listing './lib/python3.5/site-packages/libsaas/services/ducksboard'...
Listing './lib/python3.5/site-packages/libsaas/services/flurry'...
Listing './lib/python3.5/site-packages/libsaas/services/fullcontact'...
Listing './lib/python3.5/site-packages/libsaas/services/github'...
Listing './lib/python3.5/site-packages/libsaas/services/googleanalytics'...
Listing './lib/python3.5/site-packages/libsaas/services/googlecalendar'...
Listing './lib/python3.5/site-packages/libsaas/services/googleoauth2'...
Listing './lib/python3.5/site-packages/libsaas/services/googlespreadsheets'...
Listing './lib/python3.5/site-packages/libsaas/services/instagram'...
Listing './lib/python3.5/site-packages/libsaas/services/intercom'...
Listing './lib/python3.5/site-packages/libsaas/services/mailchimp'...
Listing './lib/python3.5/site-packages/libsaas/services/mixpanel'...
Listing './lib/python3.5/site-packages/libsaas/services/mixrank'...
Listing './lib/python3.5/site-packages/libsaas/services/mozscape'...
Listing './lib/python3.5/site-packages/libsaas/services/pingdom'...
Listing './lib/python3.5/site-packages/libsaas/services/pipedrive'...
Listing './lib/python3.5/site-packages/libsaas/services/recurly'...
Listing './lib/python3.5/site-packages/libsaas/services/spotify'...
Listing './lib/python3.5/site-packages/libsaas/services/stripe'...
Listing './lib/python3.5/site-packages/libsaas/services/trello'...
Listing './lib/python3.5/site-packages/libsaas/services/twilio'...
Listing './lib/python3.5/site-packages/libsaas/services/uservoice'...
Listing './lib/python3.5/site-packages/libsaas/services/youtube'...
Listing './lib/python3.5/site-packages/libsaas/services/zendesk'...
Listing './lib/python3.5/site-packages/libsaas-0.4.egg-info'...
Listing './lib/python3.5/site-packages/marshmallow'...
Listing './lib/python3.5/site-packages/marshmallow-3.0.0b6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/times'...
Listing './lib/python3.5/site-packages/times-0.7.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
